# 8d-expert-workbench

./: .env.example  PRODUCTION_ARCHITECTURE.md  README.md  pyproject.toml  workbench_app.py
.github/workflows/: ci.yml
evaluation/: eval.py
scripts/: answer.py  app.py  ingest.py  workbench_app.py
tests/: test_smoke.py
