[project]
name = "8d-expert-workbench"
version = "0.1.0"
description = "8D Expert Workbench UI built on the CAPA/8D Expert RAG core"
requires-python = ">=3.11"

dependencies = [
    "capa-8d-expert @ git+https://github.com/kolmag/capa-8d-expert.git",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "tqdm>=4.66.0",
    "gradio>=5.0.0",
    "pydantic>=2.0.0",
    # BGE reranker runtime:
    # (~2GB download for torch, ~570MB for the model on first run)
    "torch>=2.11.0",
    "transformers>=5.3.0",
    "scikit-learn>=1.8.0",
    "plotly>=6.6.0",
    "langfuse>=4.3.1",
    "litellm>=1.83.14",
    "groq>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv.sources]
# torch from PyPI (CPU-only build is lighter — swap for cu121 if you have a GPU)

[tool.uv]
constraint-dependencies = [
    "numba>=0.59",
    "llvmlite>=0.40",
    "onnxruntime>=1.16.0,<1.20.0",
]
